drkns 2025-08-14 23:21:08+01:00 - build 349

1. Change Time support.

2. Make Far Attributes dialog reachable.

drkns 2025-07-12 20:17:28+01:00 - build 348

1. 7z.dll v25.00.

drkns 2024-12-18 20:13:59+00:00 - build 347

1. 7z.dll v24.09.

drkns 2024-11-27 17:23:01+00:00 - build 346

1. gh-886: ArcLite crash during an archive update.
   Improve compression method detection when updating empty archives.

drkns 2024-09-15 14:00:02+01:00 - build 345

1. Improve compression method detection when updating archives.

drkns 2024-08-28 22:00:00+01:00 - build 344

1. Updated 7z.dll to v24.08.

Yegor 2024-07-22 16:00-07:00 - build 343

1. Updated 7z.dll to v24.07

w17 2024-05-18 10:34:17+03:00 - build 342

1. 7z.dll 24.05

rohitab 2024-01-29 14:20:54+11:00 - build 341

1. Check AlternateFileName due to changes in Far for gh-670.

rohitab 2024-01-28 15:30:00+11:00 - build 340

1. gh-781: Enable selection of compression methods for Zip archives.

drkns 2023-09-21 19:20:10+01:00 - build 339

1. Correction of 327.2.

w17 2023-06-26 14:22:24+03:00 - build 338

1. 7z.dll 23.01

w17 2023-05-24 15:36:25+03:00 - build 337

1. PF_RECURSIVEPANEL -> OPIF_RECURSIVEPANEL, OPIF_DELETEFILEONCLOSE, OPIF_DELETEDIRONCLOSE

drkns 2023-05-22 18:57:05+01:00 - build 336

1. gh-695: Archive file creation time lost after deleting files.

w17 2023-05-12 13:14:32+03:00 - build 335

1. add PF_RECURSIVEPANEL flag

w17 2023-04-29 14:33:51+03:00 - build 334

1. Correct 333

w17 2023-04-28 12:59:50+03:00 - build 333

1. Open partition without copying.

w17 2022-09-05 20:06:54+03:00 - build 332

1. Avoid some arclite crash

w17 2022-09-03 00:14:10+03:00 - build 331

1. Correct 330

w17 2022-09-02 16:32:43+03:00 - build 330

1. Updating Archives does not preserve File Creation Timestamp
   https://github.com/FarGroup/FarManager/issues/496

w17 2022-08-26 14:30:39+03:00 - build 329

1. 7z.dll 22.01

drkns 2022-08-02 21:52:59+01:00 - build 328

1. UAF crash after 325.
